--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 3.0.0.beta4 August 16, 2011
+* Allow configuration per dimension
+
 == 3.0.0.beta2 August 8, 2010
 * Fix dom_class and tap methods in rails.rc
 
