Validate minimum stars

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 3.0.0.beta5 August 23, 2011
+* Validate minimum of stars
+
 == 3.0.0.beta4 August 16, 2011
 * Allow configuration per dimension
 
